--- a/package.json
+++ b/package.json
@@ -3,20 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "lint": "next lint",
     "prettier-format": "prettier --config .prettierrc './**/*.{js,jsx,ts,tsx,css,md,json}' --write",
     "prepare": "husky install",
-    "create-hook": "husky add .husky/pre-commit \"npm run prettier-format && npm run lint\""
+    "create-hook": "husky add .husky/pre-commit \"npm run prettier-format && cd client && npm run lint\""
   },
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
-    "eslint": "^8.1.0",
-    "eslint-config-next": "13.4.8",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
     "prettier": "^3.0.2"
   }
