--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prettier-format": "prettier --config .prettierrc './**/*.{js,jsx,ts,tsx,css,md,json}' --write",
     "prepare": "husky install",
-    "create-hook": "husky add .husky/pre-commit 'npm run prettier-format && (cd client && npm run lint)'"
+    "create-hook": "husky add .husky/pre-commit 'npm run prettier-format && (cd client && npm run lint) && (cd server && npm run lint)'"
   },
   "dependencies": {},
   "devDependencies": {
